# webb-ark-circom-issue

./: Cargo.toml  README.md  poseidon_vanchor_2_2.wasm  verification_key.json
src/: lib.rs
